# common-robot-interface

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
cri/: controller.py  robot.py
cri/dobot/: mg400_client.py  mg400_controller.py
cri/dobot/cr/: dobot_api.py
cri/dobot/mg400/: dobot_api.py
cri/sim/: sim_client.py  sim_controller.py
tests/: mg400_robot_test.py  mg400_robot_test_async.py  sim_robot_test.py  test_controller_compat.py  test_cri_live.py  test_cri_mg400.py  test_cri_sim.py  test_cri_sim_async.py  test_cri_sim_mg400.py
tools/robot_jogger/: robot_jogger.py
