[project]
name = "cri"
version = "0.1.0"
description = "Common Robot Interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "transforms3d", "PyQt5"]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"