[project]
name = "common-robot-interface"
version = "0.5.3"
description = "Common Robot Interface"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "transforms3d"]

[project.optional-dependencies]
sim = ["tactile-sim"]
gui = ["PyQt5"]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[tool.hatch.build.targets.wheel]
packages = ["cri"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
